# desafio-tecnico-gestaods

./: .coveragerc  .env.example  .flake8  .gitignore  README.md  estoque.py  produto.py  pyproject.toml  tasks.py  test_estoque.py  test_produto.py
estoque/domain/: entities.py  exceptions.py
produto/domain/: entities.py  value_objects.py
src/config_django/: asgi.py  settings.py  urls.py  wsgi.py
src/estoque/: models.py
src/estoque/application/dtos/: info_estoque_dto.py
src/estoque/application/use_cases/: adicionar_produto_ao_estoque.py  ajustar_quantidade_produto.py  filtrar_estoque_por_preco.py  total_produtos_estoque.py  total_valor_estoque.py  verificar_estoque_produto.py
src/estoque/domain/: entities.py  exceptions.py  repositories.py  value_objects.py
src/estoque/infrastructure/: DjangoEstoqueRepository.py  MemoryEstoqueRepository.py  django_models.py
src/estoque/infrastructure/django/: DjangoEstoqueRepository.py  apps.py  containers.py  django_models.py  models.py  urls.py
src/estoque/infrastructure/memory/: MemoryEstoqueRepository.py  (+1 more)
src/estoque/migrations/: 0001_initial.py
src/produto/: models.py  urls.py
src/produto/domain/: entities.py  repositories.py  value_objects.py
src/produto/infrastructure/: DjangoProdutoRepository.py  MemoryProdutoRepository.py
src/produto/migrations/: 0001_initial.py
tests/caixa/domain/: test_caixa.py
tests/estoque/domain/: contract_tests.py  test_entities.py  test_value_objects.py
tests/estoque/infrastructure/: test_django_estoque_repository.py  test_memory_estoque_repository.py
tests/produto/: test_value_objects.py
tests/produto/domain/: contract_tests.py  test_entities.py  test_produto.py  test_value_objects.py
tests/produto/infrastructure/: test_django_produto_repository.py  test_memory_produto_repository.py
(+45 files in other folders)
