[project]
name = "caixa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.13",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.uv]
managed = true
package = true

[tool.uv.sources]
caixa = { workspace = true }

[tool.mypy]
mypy_path = "."
explicit_package_bases = true
namespace_packages = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "src/configuracao_django/settings\\.py"
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "config_django.settings"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "mypy>=1.0.0",
    "coverage>=7.0.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]
